--- a/style.css
+++ b/style.css
@@ -58,29 +58,38 @@
 
 /* Bouton pour ouvrir la fenetre */
 #FAM-button-open {
-  color: var(--accentClr);
-  font-size: 18px;
-  background-color: var(--neutralDark);
-  border-radius: 10px;
-  width: 45px;
-  height: 45px;
-  left: 10px;
-  top: 15px;
-  cursor: pointer;
   transition-property: right;
   transition-duration: 500ms;
-  display: grid;
-  place-items: center;
+  cursor: pointer;
+  background: var(--neutral);
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding: 5px 10px;
+  position: fixed;
+  top: 145px;
+  left: 10px;
+  height: 35px;
+  font-size: var(--normal-size);
 }
 
 #FAM-button-open:hover {
-  background: var(--FAM-accentClr);
-  color: var(--FAM-pluginBackground);
+  background-color: var(--accentClr);
+  color: var(--textColor);
 }
 
 #FAM[data-hidden="false"] ~ #FAM-button-open {
   background: var(--FAM-accentClr);
   color: var(--FAM-pluginBackground);
+}
+
+#FAM-button-open:hover i {
+  color: var(--survolBoutons); /* Couleur de l'icône au survol */
+}
+
+#FAM-button-open i:hover {
+  color: var(--survolBoutons); /* Couleur au survol */
 }
 
 /* Entête de la fenetre */
