--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@
 
 /* Bouton pour ouvrir la fenetre */
 #FAM-button-open {
-  transition-property: right;
+  transition-property: left;
   transition-duration: 500ms;
   cursor: pointer;
   background: var(--neutral);
@@ -68,7 +68,7 @@
   gap: 10px;
   padding: 5px 10px;
   position: fixed;
-  top: 280px;
+  top: 380px;
   left: 10px;
   height: 35px;
   font-size: var(--normal-size);
